--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
         "webpack-dev-server": "^3.11.3"
     },
     "dependencies": {
-        "axios": "^0.26.1"
+        "axios": "^0.26.1",
+        "chartist": "^0.11.4"
     }
 }
