--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "start": "nodemon --watch backend --exec babel-node backend/server.js",
         "build": "rm -rf dist && babel backend -d dist && cd frontend && npm install && npm run build",
         "serve": "node dist/server.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "heroku-prebuild": "cd frontend && npm install --dev",
+        "heroku-postbuild": "npm run build && cd frontend && npm install && npm run build"
     },
     "repository": {
         "type": "git",
@@ -37,5 +38,9 @@
         "eslint": "^8.13.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-plugin-import": "^2.26.0"
+    },
+    "engines": {
+        "node": "12.4.0",
+        "npm": "6.9.0"
     }
 }
